--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -156,7 +156,7 @@
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
 						<a class="dropdown-item" id="new-table-btn" title="New Table"><i class="la la-plus-circle"></i> New Table</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" id="delete-table-btn" title="New Table"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
+						<a class="dropdown-item" id="delete-table-btn" title="Delete Table" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
 					</div>
 				</li>
 			</ul>
@@ -182,7 +182,7 @@
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
 						<a class="dropdown-item" id="new-page-btn" title="New Page"><i class="la la-plus-circle"></i> New Page</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" id="delete-page-btn" title="New Table"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedPageName"></span></a>
+						<a class="dropdown-item" id="delete-page-btn" title="Delete Page" data-frmdb-prop="pagePathToDelete::$frmdb.selectedPagePath"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedPageName"></span></a>
 					</div>
 				</li>
 			</ul>
