#192 added draft modal for "Add to Wish List"

--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -271,7 +271,7 @@
                 <img class="card-img-bottom" src="assets/images/83-royal-hotel.png" alt="Card image cap">
             </div>
         </a>
-        <a href="javascript:void(0)" class="ecommerce item" data-category="E-commerce" data-toggle="modal" data-target="#add-to-wishlist-modal">
+        <a href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~TBD')" class="ecommerce item" data-category="E-commerce">
             <div class="card">
                 <div class="card-header text-center">
                     <div class="item-name">Watch
@@ -817,10 +817,10 @@
                 <img class="card-img-bottom" src="assets/images/67-the-real-wedding.png" alt="Card image cap">
             </div>
         </a>
-        <a href="javascript:alert('Add to Wishlist! App ready in 3 to 9 weeks depending on the popularity!')" class="other item" data-category="Miscellaneous">
+        <a href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~Barber Shop')" class="other item" data-category="Miscellaneous">
             <div class="card">
                 <div class="card-header text-center">
-                    <div class="item-name">Razor
+                    <div class="item-name">Barber Shop
 
                         <div class="ribbon ribbon-top-left">
                             <span>Wish List</span>
@@ -1019,40 +1019,6 @@
     </div>
 </footer>
 
-<div class="modal" id="add-to-wishlist-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Add to Wish List</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="alert alert-secondary" role="alert" data-frmdb-value="::short_description">
-                        short app description...
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="your@email" required>
-                    </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="notify_me">
-                        <label class="form-check-label" for="notify_me">Notify me when the app is ready.</label>
-                    </div>
-                
-                    <div class="form-group">
-                        <label for="details">If you'd like to share any questions/comments/details:</label>
-                        <textarea class="form-control" id="details" rows="3"></textarea>
-                    </div>
-                
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -1068,5 +1034,7 @@
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
+
+<script src="/formuladb/frmdb-fe.js"></script>
 
 </html>
