--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131901388-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    
-    gtag('config', 'UA-131901388-1');
-</script>
-<script>
-    (function (h, o, t, j, a, r) {
-    	h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-    	h._hjSettings = { hjid: 1150803, hjsv: 6 };
-    	a = o.getElementsByTagName('head')[0];
-    	r = o.createElement('script'); r.async = 1;
-    	r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-    	a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-</script>
-<script async="" src="https://static.hotjar.com/c/hotjar-1150803.js?sv=6"></script>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="Start your development with a Design System for Bootstrap 4.">
-<meta name="author" content="Creative Tim">
-<title>FormulaDB - Build Applications Without Code</title>
-<link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-<link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-<link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
-<script async="" src="https://script.hotjar.com/modules.4d71caa5b820d76ee739.js" charset="utf-8"></script>
-<style type="text/css">
-    iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}
-</style>
-<script async="" src="https://script.hotjar.com/modules.4d71caa5b820d76ee739.js" charset="utf-8"></script>
-<style type="text/css">
-    iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}
-</style>
-
+<head>
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131901388-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        
+        gtag('config', 'UA-131901388-1');
+    </script>
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 1150803, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
+    <script async="" src="https://static.hotjar.com/c/hotjar-1150803.js?sv=6"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
+    <meta name="author" content="Creative Tim">
+    <title>FormulaDB - Build Applications Without Code</title>
+    <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+    <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script async="" src="https://script.hotjar.com/modules.4d71caa5b820d76ee739.js" charset="utf-8"></script>
+    <style type="text/css">
+        iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}
+    </style>
+    <script async="" src="https://script.hotjar.com/modules.4d71caa5b820d76ee739.js" charset="utf-8"></script>
+    <style type="text/css">
+        iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}
+    </style>
+</head>
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io">
 <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
 <div style="position: absolute; top: 0; width: 100%">
     <div class="section section-shaped" style="height: 700px">
@@ -1036,5 +1038,5 @@
 </script>
 
 <script src="/formuladb/frmdb-fe.js"></script>
-
+</body>
 </html>
