#192 modal working, whishlist count working

--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -245,7 +245,7 @@
         </ul>
     </nav>
     <div class="grid" style="position: relative; height: 13154.9px;">
-        <a href="/formuladb-editor/editor.html#/formuladb-examples/inventory/new-booking.html" class="admin item" data-category="Admin &amp; Dashboard">
+        <a id="Inventory" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard">
             <div class="card">
                 <div class="card-header text-center">
                     <div class="item-name">Inventory
@@ -259,7 +259,7 @@
                 <img class="card-img-bottom" src="assets/images/sb-admin-2.png" alt="Card image cap">
             </div>
         </a>
-        <a href="/formuladb-editor/editor.html#/formuladb-examples/hotel-booking/index.html" class="travel item" data-category="Travel &amp; Booking" target="">
+        <a id="Hotel_Booking" href="/formuladb-editor/editor.html#/formuladb-examples/hotel-booking/index.html" class="travel item" data-category="Travel &amp; Booking" target="">
             <div class="card" data-toggle="tooltip" title="">
                 <div class="card-header text-center">
                     <div class="item-name">Hotel Booking
@@ -273,10 +273,10 @@
                 <img class="card-img-bottom" src="assets/images/83-royal-hotel.png" alt="Card image cap">
             </div>
         </a>
-        <a href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~TBD')" class="ecommerce item" data-category="E-commerce">
+        <a id="Online_Store" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~Online Store')" class="ecommerce item" data-category="E-commerce">
             <div class="card">
                 <div class="card-header text-center">
-                    <div class="item-name">Watch
+                    <div class="item-name">Online Store
 
                         <div class="ribbon ribbon-top-left">
                             <span>Wish List</span>
