--- a/apps/formuladb-internal/formuladb.io/add__WishListRequest.html
+++ b/apps/formuladb-internal/formuladb.io/add__WishListRequest.html
@@ -1,21 +1,33 @@
 <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
 
-<div class="modal" tabindex="-1" role="dialog" style="display: initial">
+<div class="modal" tabindex="-1" role="dialog" style="display: initial" data-frmdb-record="WishListRequest~~__FRMDB_NEW_RECORD__">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add to Wish List <span data-frmdb-value="::_id"></span></h5>
+                <h5 class="modal-title">Add to Wish-List</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form>
-                    <div class="alert alert-secondary" role="alert" data-frmdb-value="::short_description">
+                <form>                    
+                    <div class="form-group">
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">App</div>
+                            </div>
+                            <select disabled class="form-control" id="details" rows="3" data-frmdb-value data-frmdb-target-field="app">
+                                <option selected data-frmdb-attr="value::$INITDATA$._id" data-frmdb-value="::$INITDATA$._id_"></option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="alert alert-secondary" role="alert" data-frmdb-value="::$INITDATA$.short_description">
                         short app description...
                     </div>
+
                     <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="your@email" required data-frmdb-value="::email">
+                        <input type="email" class="form-control" id="email" placeholder="your@email" required data-frmdb-value="::email" />
                     </div>
                     
                     <div class="form-group">
@@ -23,7 +35,10 @@
                         <textarea class="form-control" id="details" rows="3" data-frmdb-value="::comments"></textarea>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" onclick="$SUBMIT(this)">Submit</button>
+                    <div class="alert d-none" data-frmdb-submit-status role="alert" title="Thank You!">
+                        short app description...
+                    </div>
                 </form>
             </div>
         </div>
