fix cleanup google analytics, hotjar, isotop  on Page Save

--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -244,7 +244,7 @@
             </li>
         </ul>
     </nav>
-    <div class="grid" style="position: relative; height: 13154.9px;">
+    <div class="grid frmdb-isotope-grid" style="">
         <a id="Inventory" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard">
             <div class="card">
                 <div class="card-header text-center">
