--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -39,9 +39,17 @@
 			height: 38px; 
 		}
 
+		#vvveb-builder #left-panel .component-properties .form-group > label {
+			margin: 0; 
+		}
+
 		#left-panel .component-properties .tab-content {
 			overflow: auto; 
 			height: calc(100vh - var(--builder-filemanager-height) - 132px);
+		}
+
+		#left-panel #properties-tabs.nav {
+			padding-left: 0px;
 		}
 	</style>
 </head>
@@ -78,11 +86,11 @@
 					data-vvveb-action="fullscreen">
 					<i class="la la-arrows"></i>
 				</button>
-
+<!-- 
 				<button id="code-editor-btn" data-view="mobile" class="btn btn-sm btn-light btn-sm" title="Code Editor"
 					data-vvveb-action="togglePageEditor">
 					<i class="la la-file-code-o"></i>
-				</button>
+				</button> -->
 
 				<button id="table-code-editor-btn" data-view="mobile" class="d-none btn btn-sm btn-light btn-sm" title="Table Code Viewer"
 					data-vvveb-action="toggleTableEditor">
@@ -209,27 +217,33 @@
 
 			<div class="component-properties">
 				<ul class="nav nav-tabs nav-fill flex-nowrap" id="properties-tabs" role="tablist">
-					<li class="nav-item content-tab flex-grow-1">
+					<li class="nav-item content-tab">
 						<a class="nav-link active py-1" data-toggle="tab" href="#content-left-panel-tab" role="tab"
 							aria-controls="components" aria-selected="true">
 							<i class="la la-lg la-cube"></i>
 							Content
 						</a>
 					</li>
-					<li class="nav-item style-tab flex-grow-1">
+					<li class="nav-item style-tab">
 						<a class="nav-link py-1" data-toggle="tab" href="#style-left-panel-tab" role="tab" aria-controls="blocks"
 							aria-selected="false">
 							<i class="la la-lg la-image"></i>
 							Style
 						</a>
 					</li>
-					<li class="nav-item advanced-tab flex-grow-0">
-						<a class="nav-link py-1" data-toggle="tab" href="#advanced-left-panel-tab" role="tab" aria-controls="blocks"
+					<li class="nav-item data-tab">
+						<a class="nav-link py-1" data-toggle="tab" href="#data-left-panel-tab" role="tab" aria-controls="blocks"
 							aria-selected="false">
-							<i class="la la-lg la-cog"></i>
-							Advanced
+							<i class="la la-lg la-database"></i>
+							Data
 						</a>
 					</li>
+					<!-- <li class="nav-item code-tab">
+						<a class="nav-link py-1" data-toggle="tab" href="#advanced-left-panel-tab" role="tab" aria-controls="blocks"
+							aria-selected="false">
+							<i class="la la-lg la-code"></i>
+						</a>
+					</li> -->
 				</ul>
 
 				<div class="tab-content">
@@ -242,8 +256,8 @@
 						aria-labelledby="style-tab">
 					</div>
 
-					<div class="tab-pane fade show" id="advanced-left-panel-tab" data-section="advanced" role="tabpanel"
-						aria-labelledby="advanced-tab">
+					<div class="tab-pane fade show" id="data-left-panel-tab" data-section="data" role="tabpanel"
+						aria-labelledby="data-tab">
 					</div>
 				</div>
 			</div>
