data-frmdb-table binding rendered as <select> dynamically populated with the list of Tables

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -144,7 +144,9 @@
 			<div style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
 				<img src="/formuladb/img/logo.png" style="width: 110px; height: 32px;" />
 				<div class="dropdown float-right">
-					<button class="btn btn-sm dropdown-toggle text-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<button class="btn btn-sm dropdown-toggle text-light" type="button" id="dropdownMenuButton" 
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+						title="Test/Playground Environments (Coming Soon)">
 						<span class="badge badge-pill badge-light text-danger">live</span>
 					</button>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
@@ -296,6 +298,7 @@
 							<a id="down-btn" href="" title="Move element down"><i class="la la-arrow-down"></i></a>
 							<a id="clone-btn" href="" title="Clone element"><i class="la la-copy"></i></a>
 							<a id="delete-btn" href="" title="Remove element"><i class="la la-trash"></i></a>
+							<a id="data-btn" href="" title="Drag the little database icon to a Table Cell&#10;in order to link the value to this Page Element&#10;(Comming Soon, for now please use the left panel, Data tab)"><i class="la la-database"></i></a>
 						</div>
 					</div>
 
