--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -60,7 +60,7 @@
 	<div id="vvveb-builder">
 
 		<div id="data-grid">
-			<frmdb-data-grid data-frmdb-attr="table_name:$frmdb.selectedTableId" no_floating_filter="true"></frmdb-data-grid>
+			<frmdb-data-grid data-frmdb-attr="table_name:$frmdb.selectedTableId" expand_row="#edit-record-modal" no_floating_filter="true"></frmdb-data-grid>
 		</div>
 
 		<div id="top-panel">
@@ -966,6 +966,23 @@
 			</div>
 		</div>
 
+	</div>
+
+	<!-- edit record -->
+	<div class="modal fade" id="edit-record-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-scrollable" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Edit Record</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<frmdb-form></frmdb-form>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- bootstrap -->
