formuladb.io modifs

--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -88,12 +88,13 @@
                 </div>
                 <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link" data-toggle="dropdown" role="button">
+                        <a href="no-code.html" class="nav-link" data-toggle="dropdown" role="button">
                             <i class="ni ni-ui-04 d-lg-none"></i>
                             <span class="nav-link-inner--text">No Code</span>
                         </a>
-                        <div class="dropdown-menu dropdown-menu-xl">
-                            <div class="dropdown-menu-inner"></div>
+                        <div class="dropdown-menu">
+                            <a href="no-code-vs-low-code.html" class="dropdown-item">No-Code vs Low-Code</a>
+                            <a href="no-code-for-small-businesse.html" class="dropdown-item">No-Code for Small Businesses</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -101,30 +102,26 @@
                             <i class="ni ni-collection d-lg-none"></i>
                             <span class="nav-link-inner--text">Low Code</span>
                         </a>
-                        <div class="dropdown-menu"></div>
+                        <div class="dropdown-menu">
+                            <a href="no-code-vs-low-code.html" class="dropdown-item">No-Code vs Low-Code</a>
+                            <a href="low-code-for-medium-and-large-businesses.html" class="dropdown-item">Low-Code for Medium and Large Businesses</a>    
+                            <a href="low-code-for-web-designers.html" class="dropdown-item">Low-Code for Web Designers</a>
+                            <a href="low-code-for-developers.html" class="dropdown-item">Low-Code for Developers</a>
+                            <a href="low-code-for-devops-engineers.html" class="dropdown-item">Low-Code for DevOps Engineers</a>
+                            <a href="low-code-for-it-system-administrators.html" class="dropdown-item">Low-Code for IT/System Administrators</a>
+                            <a href="low-code-for-it-managers.html" class="dropdown-item">Low-Code for IT Managers</a>
+                        </div>
                     </li>
                 </ul>
                 <ul class="navbar-nav navbar-nav-hover align-items-lg-center ml-lg-auto">
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                            <i class="ni ni-collection d-lg-none"></i>
-                            <span class="nav-link-inner--text">Pricing</span>
-                        </a>
-                        <div class="dropdown-menu"></div>
+                        <a href="#" class="nav-link">Pricing</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                            <i class="ni ni-collection d-lg-none"></i>
-                            <span class="nav-link-inner--text">Partners</span>
-                        </a>
-                        <div class="dropdown-menu"></div>
+                        <a href="community.html" class="nav-link">Community</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                            <i class="ni ni-collection d-lg-none"></i>
-                            <span class="nav-link-inner--text">About</span>
-                        </a>
-                        <div class="dropdown-menu"></div>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
