applied isotop.js custom processing on Clone and Delete node

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -690,6 +690,7 @@
 			  {% if (typeof min !== 'undefined' && min != false) { %}min="{%=min%}"{% } %} 
 			  {% if (typeof max !== 'undefined' && max != false) { %}max="{%=max%}"{% } %} 
 			  {% if (typeof step !== 'undefined' && step != false) { %}step="{%=step%}"{% } %} 
+			  {% if (typeof placeholder !== 'undefined' && placeholder != false) { %}placeholder="{%=placeholder%}"{% } %} 
 		class="form-control"/>
 	</div>
 </script>
