Data binding for text fields in table record working

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -298,7 +298,7 @@
 							<a id="down-btn" href="" title="Move element down"><i class="la la-arrow-down"></i></a>
 							<a id="clone-btn" href="" title="Clone element"><i class="la la-copy"></i></a>
 							<a id="delete-btn" href="" title="Remove element"><i class="la la-trash"></i></a>
-							<a id="data-btn" href="" title="Drag the little database icon to a Table Cell&#10;in order to link the value to this Page Element&#10;(Comming Soon, for now please use the left panel, Data tab)"><i class="la la-database"></i></a>
+							<!-- <a id="data-btn" href="" title="Drag the little database icon to a Table Cell&#10;in order to link the value to this Page Element&#10;(Comming Soon, for now please use the left panel, Data tab)"><i class="la la-database"></i></a> -->
 						</div>
 					</div>
 
